--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0",
+    "react-tooltip": "^5.11.2",
     "yup": "^1.1.1"
   },
   "devDependencies": {
