--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dev": "tsc && vite build --watch",
     "build": "tsc && vite build",
     "pack": "node pack.js",
-    "release": "gh release create v%npm_package_version% release/redmine-time-tracking-v%npm_package_version%.zip --generate-notes",
+    "release": "gh release create v%npm_package_version% release/redmine-time-tracking-v%npm_package_version%.zip --notes-file release_notes.md --generate-notes",
     "publish": "pnpm run build && pnpm run pack && pnpm run release",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
