--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-react-refresh": "^0.4.1",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
+    "tailwindcss-animate": "^1.0.5",
     "typescript": "^5.0.4",
     "vite": "^4.3.5"
   }
