--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "redmine-time-tracking",
   "description": "Redmine Time Tracking",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "author": {
     "name": "CrawlerCode",
     "email": "crawlercode@outlook.de"
@@ -27,6 +27,7 @@
     "@tanstack/react-query": "^4.29.12",
     "axios": "^1.4.0",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "deepmerge": "^4.3.1",
     "formik": "^2.4.1",
     "react": "^18.2.0",
