feat: Added time spend date & preview
- Allow user to edit time spend date
- Added time spend preview
- Added flatpickr
- Set window with to 320px

--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
     "deepmerge": "^4.3.1",
+    "flatpickr": "^4.6.13",
     "formik": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flatpickr": "^3.10.13",
     "react-router-dom": "^6.12.1",
     "react-tooltip": "^5.13.1",
     "yup": "^1.2.0"
@@ -40,6 +42,7 @@
     "@types/chrome": "^0.0.237",
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.2.4",
+    "@types/react-flatpickr": "^3.8.8",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "@vitejs/plugin-react": "^4.0.0",
