--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "adm-zip": "^0.5.10",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.43.0",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
     "postcss": "^8.4.24",
