--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@tanstack/react-query": "^4.29.15",
+    "@tanstack/react-query": "^4.29.25",
     "axios": "^1.4.0",
-    "clsx": "^1.2.1",
+    "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "deepmerge": "^4.3.1",
     "flatpickr": "^4.6.13",
@@ -34,28 +34,29 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
-    "react-router-dom": "^6.14.0",
-    "react-tooltip": "^5.15.0",
+    "react-router-dom": "^6.14.2",
+    "react-tooltip": "^5.18.0",
+    "tailwind-merge": "^1.14.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.238",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@types/chrome": "^0.0.241",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "@types/react-flatpickr": "^3.8.8",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
-    "@vitejs/plugin-react": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
+    "@vitejs/plugin-react": "^4.0.3",
     "adm-zip": "^0.5.10",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.43.0",
+    "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.1",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.26",
+    "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.9"
+    "typescript": "^5.1.6",
+    "vite": "^4.4.4"
   }
 }
