feat: Added tailwind plugin for eslint and prettier
- Added eslint tailwindcss plugin
- Added prettier tailwindcss plugin
- Moved pack.js into scripts folder
- Update dependencies
- Fix eslint issues

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,5 +3,6 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": false,
-  "printWidth": 200
+  "printWidth": 200,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
