--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-flatpickr": "^3.10.13",
     "react-intl": "^6.4.4",
     "react-router-dom": "^6.14.2",
+    "react-select": "^5.7.4",
     "react-tooltip": "^5.20.0",
     "tailwind-merge": "^1.14.0",
     "yup": "^1.2.0"
