--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react-select": "^5.7.4",
     "react-tooltip": "^5.20.0",
     "tailwind-merge": "^1.14.0",
+    "tailwindcss-shadow-fill": "^1.0.1",
+    "tailwindcss-text-fill": "^0.2.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
