--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,9 @@
 {
   "manifest_version": 3,
-  "name": "Redmine Time Tracking",
   "version": "1.11.2",
-  "description": "Start-stop timer for Redmine",
+  "name": "__MSG_extName__",
+  "description": "__MSG_extDesc__",
+  "default_locale": "en",
   "icons": {
     "16": "logo16.png",
     "48": "logo48.png",
@@ -11,7 +12,7 @@
   "author": "crawlercode@outlook.de",
   "homepage_url": "https://github.com/CrawlerCode/redmine-time-tracking",
   "action": {
-    "default_title": "Redmine Time Tracking",
+    "default_title": "__MSG_extName__",
     "default_popup": "index.html?location=popup"
   },
   "options_ui": {
