--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@tanstack/query-async-storage-persister": "^4.35.3",
     "@tanstack/react-query": "^4.35.3",
+    "@tanstack/react-query-persist-client": "^4.35.5",
     "axios": "^1.5.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
