--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-query-persist-client": "^5.36.0",
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
+    "country-flag-icons": "^1.5.11",
     "date-fns": "^3.6.0",
     "deepmerge": "^4.3.1",
     "flatpickr": "^4.6.13",
