--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,15 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
 node_modules
 dist
-dist-ssr
-*.local
 
-# Editor directories and files
+.env
+
 .vscode/*
 !.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+
 release
 release_notes.md
