--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@tanstack/query-async-storage-persister": "^5.36.0",
     "@tanstack/react-query": "^5.36.0",
+    "@tanstack/react-query-devtools": "^5.40.1",
     "@tanstack/react-query-persist-client": "^5.36.0",
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
