--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "type": "module",
   "scripts": {
     "dev": "node scripts/updateVersion.js && tsc && vite build --watch",
-    "build": "node scripts/updateVersion.js && tsc && vite build",
-    "pack": "node scripts/pack.js",
-    "release": "gh release create v%npm_package_version% release/redmine-time-tracking-v%npm_package_version%.zip --notes-file release_notes.md --generate-notes",
-    "publish": "pnpm run build && pnpm run pack && pnpm run release",
-    "publish:beta": "pnpm run build && pnpm run pack && pnpm run release --prerelease --target beta",
+    "build": "pnpm run build:chrome && pnpm run build:firefox",
+    "build:chrome": "tsc && cross-env PLATFORM=chrome vite build",
+    "build:firefox": "tsc && cross-env PLATFORM=firefox vite build",
+    "release": "gh release create v%npm_package_version% releases/redmine-time-tracking-v%npm_package_version%-chrome.zip releases/redmine-time-tracking-v%npm_package_version%-firefox.zip --notes-file release_notes.md --generate-notes",
+    "publish": "pnpm run build && pnpm run release",
+    "publish:beta": "pnpm run build && pnpm run release --prerelease --target beta",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
     "test": "playwright test"
   },
@@ -60,8 +61,8 @@
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "adm-zip": "^0.5.14",
     "autoprefixer": "^10.4.19",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
@@ -75,6 +76,8 @@
     "tailwindcss": "^3.4.4",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.5.3",
-    "vite": "^5.3.3"
+    "vite": "^5.3.3",
+    "vite-plugin-static-copy": "^1.0.6",
+    "vite-plugin-zip-pack": "^1.2.4"
   }
 }
