feat: Pin issue of current active tab to the top

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -20,7 +20,9 @@
         "open_in_tab": false
     },
     "permissions": [
-        "storage"
+        "storage",
+        "tabs",
+        "activeTab"
     ],
     "host_permissions": [
         "http://*/*",
