--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "version": "1.19.0",
+    "version": "...",
     "name": "__MSG_extName__",
     "description": "__MSG_extDesc__",
     "default_locale": "en",
