docs: Add firefox install button and badges

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "tsc && vite build --watch --mode development",
+    "dev:chrome": "tsc && cross-env PLATFORM=chrome vite build --watch --mode development",
+    "dev:firefox": "tsc && cross-env PLATFORM=firefox vite build --watch --mode development",
     "build": "pnpm run build:chrome && pnpm run build:firefox",
     "build:chrome": "tsc && cross-env PLATFORM=chrome vite build",
     "build:firefox": "tsc && cross-env PLATFORM=firefox vite build",
