--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,31 +1,30 @@
 {
-    "manifest_version": 3,
-    "version": "...",
-    "name": "__MSG_extName__",
-    "description": "__MSG_extDesc__",
-    "default_locale": "en",
-    "icons": {
-        "16": "logo16.png",
-        "48": "logo48.png",
-        "128": "logo128.png"
-    },
-    "author": "crawlercode@outlook.de",
-    "homepage_url": "https://github.com/CrawlerCode/redmine-time-tracking",
-    "action": {
-        "default_title": "__MSG_extName__",
-        "default_popup": "index.html?location=popup"
-    },
-    "options_ui": {
-        "page": "index.html?location=options#/settings",
-        "open_in_tab": false
-    },
-    "permissions": [
-        "storage",
-        "tabs",
-        "activeTab"
-    ],
-    "host_permissions": [
-        "http://*/*",
-        "https://*/*"
-    ]
+  "manifest_version": 3,
+  "version": "...",
+  "name": "__MSG_extName__",
+  "description": "__MSG_extDesc__",
+  "default_locale": "en",
+  "icons": {
+    "16": "logo16.png",
+    "48": "logo48.png",
+    "128": "logo128.png"
+  },
+  "author": "crawlercode@outlook.de",
+  "homepage_url": "https://github.com/CrawlerCode/redmine-time-tracking",
+  "action": {
+    "default_title": "__MSG_extName__",
+    "default_popup": "index.html?location=popup"
+  },
+  "options_ui": {
+    "page": "index.html?location=options#/settings",
+    "open_in_tab": false
+  },
+  "web_accessible_resources": [
+    {
+      "matches": ["http://*/*", "https://*/*"],
+      "resources": ["content.js", "content.css", "assets/*"]
+    }
+  ],
+  "permissions": ["storage", "tabs", "activeTab", "scripting"],
+  "host_permissions": ["http://*/*", "https://*/*"]
 }
