refactor: Improved search & queries
- Extract extended search to useSearch hook
- Add useRedminePaginatedInfiniteQuery
- Add load more button for extended search
- Filter issues query by project when search in specific project
- Improved tanstack query queryKeys

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "deepmerge": "^4.3.1",
     "flatpickr": "^4.6.13",
     "formik": "^2.4.6",
+    "qs": "^6.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-flatpickr": "^3.10.13",
@@ -54,6 +55,7 @@
     "@playwright/test": "^1.48.2",
     "@types/chrome": "^0.0.280",
     "@types/node": "^22.9.0",
+    "@types/qs": "^6.9.17",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-flatpickr": "^3.8.11",
