--- a/package.json
+++ b/package.json
@@ -23,67 +23,73 @@
     "test": "playwright test"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.7.1",
-    "@fortawesome/free-brands-svg-icons": "^6.7.1",
-    "@fortawesome/free-regular-svg-icons": "^6.7.1",
-    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@tanstack/query-async-storage-persister": "^5.62.7",
-    "@tanstack/react-query": "^5.62.7",
-    "@tanstack/react-query-devtools": "^5.62.7",
-    "@tanstack/react-query-persist-client": "^5.62.7",
+    "@tanstack/query-async-storage-persister": "^5.66.0",
+    "@tanstack/react-query": "^5.66.0",
+    "@tanstack/react-query-devtools": "^5.66.0",
+    "@tanstack/react-query-persist-client": "^5.66.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
-    "country-flag-icons": "^1.5.13",
+    "country-flag-icons": "^1.5.14",
     "date-fns": "^3.6.0",
     "deepmerge": "^4.3.1",
     "flatpickr": "^4.6.13",
     "formik": "^2.4.6",
-    "qs": "^6.13.0",
+    "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-flatpickr": "^3.10.13",
-    "react-intl": "^7.0.4",
-    "react-router-dom": "^7.0.2",
-    "react-select": "^5.9.0",
+    "react-intl": "^7.1.5",
+    "react-router-dom": "^7.1.5",
+    "react-select": "^5.10.0",
     "react-tooltip": "^5.28.0",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-shadow-fill": "^1.0.1",
     "tailwindcss-text-fill": "^0.2.0",
-    "yup": "^1.5.0"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.16.0",
-    "@playwright/test": "^1.49.1",
-    "@types/chrome": "^0.0.287",
-    "@types/node": "^22.10.2",
-    "@types/qs": "^6.9.17",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.2",
+    "@eslint/js": "^9.19.0",
+    "@playwright/test": "^1.50.1",
+    "@types/chrome": "^0.0.301",
+    "@types/node": "^22.13.1",
+    "@types/qs": "^6.9.18",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@types/react-flatpickr": "^3.8.11",
-    "@typescript-eslint/eslint-plugin": "^8.18.0",
-    "@typescript-eslint/parser": "^8.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "@typescript-eslint/parser": "^8.23.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
-    "eslint": "^9.16.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.37.2",
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-tailwindcss": "^3.17.5",
-    "globals": "^15.13.0",
-    "postcss": "^8.4.49",
+    "eslint-plugin-tailwindcss": "^3.18.0",
+    "globals": "^15.14.0",
+    "postcss": "^8.5.1",
     "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "sharp": "^0.33.5",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.18.0",
-    "vite": "^6.0.3",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.23.0",
+    "vite": "^6.1.0",
     "vite-plugin-static-copy": "^2.2.0",
     "vite-plugin-zip-pack": "^1.2.4"
   },
-  "packageManager": "pnpm@9.15.0"
+  "packageManager": "pnpm@10.2.0",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "sharp"
+    ]
+  }
 }
